fix smart home title letter spacing and smart parking header title padding, solution button width

--- a/src/pages/smart-home-v3/style.scss
+++ b/src/pages/smart-home-v3/style.scss
@@ -24,7 +24,7 @@
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
-        letter-spacing: 0.22em;
+        letter-spacing: 0.1em;
         color: #0979fd;
       }
       .title {
@@ -213,7 +213,7 @@
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
-        letter-spacing: 0.22em;
+        letter-spacing: 0.1em;
         color: #0979fd;
       }
       .title {
@@ -393,7 +393,7 @@
       font-weight: 700;
       font-size: 16px;
       text-align: center;
-      letter-spacing: 0.22em;
+      letter-spacing: 0.1em;
       color: #0979fd;
     }
     .item-border {
@@ -490,7 +490,7 @@
       font-size: 16px;
       text-align: center;
       color: #0979fd;
-      letter-spacing: 0.22em;
+      letter-spacing: 0.1em;
     }
     .title {
       font-family: "SVN Gilroy";
@@ -531,7 +531,7 @@
           font-weight: 500;
           font-size: 16px;
           line-height: 24px;
-          letter-spacing: 0.22em;
+          letter-spacing: 0.1em;
         }
         .title {
           font-family: "SVN Gilroy";
@@ -793,7 +793,7 @@
           font-weight: 700;
           font-size: 16px;
           line-height: 133%;
-          letter-spacing: 0.22em;
+          letter-spacing: 0.1em;
           color: #0979fd;
         }
         .product-right-divider {
